# Hero-Ai-Agent

./: README.md  app.py  ingest.py  logs.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
logs/: gh_agent_20260403_103039_8e6fe0.json  gh_agent_20260403_103117_4600fa.json  gh_agent_20260403_103708_a17396.json  gh_agent_20260403_104222_2a285e.json  gh_agent_20260403_104239_5eb0c5.json  gh_agent_20260403_104322_d98915.json  gh_agent_20260403_104344_01e3d5.json  gh_agent_20260403_104419_549f4b.json  gh_agent_20260403_105024_4fa387.json  gh_agent_20260403_105604_0794e6.json  gh_agent_20260403_105634_f4b993.json  gh_agent_20260403_105801_66fa39.json  gh_agent_20260403_105838_ad0b55.json  gh_agent_20260404_112956_38155d.json  gh_agent_20260404_113027_83ed6e.json  gh_agent_20260404_113131_c72c10.json  gh_agent_20260404_113226_b75929.json  gh_agent_20260404_113302_7d3dd7.json  gh_agent_20260404_113337_efad77.json  gh_agent_20260404_115747_03240b.json  gh_agent_20260404_120345_66ff5e.json  gh_agent_20260404_120645_fe83b4.json  gh_agent_20260404_121803_9c7fa0.json  gh_agent_20260404_121902_f42b3a.json  gh_agent_20260404_122132_220f0c.json  gh_agent_20260404_122212_c154fe.json  gh_agent_20260404_122312_bb0e84.json  gh_agent_20260404_122421_746285.json  gh_agent_20260404_122445_1120c1.json  gh_agent_20260404_122846_b88dd9.json  gh_agent_20260407_093413_a7a7e2.json  gh_agent_20260407_095003_3b1c09.json  gh_agent_20260407_095042_4f4432.json  gh_agent_20260407_095101_81abb3.json  gh_agent_20260407_095117_b6ed97.json
